Agregando efecto de carga en acciones del modal, y mensaje de resultado

--- a/src/app/public/usuarios/usuarios.component.html
+++ b/src/app/public/usuarios/usuarios.component.html
@@ -33,10 +33,10 @@
       <nb-card-footer>
         <div class="row">
           <div class="col-6">
-            <button  id="btn-close-edit" nbButton (click)="ref.close()" size="small" class="btn-danger">Cerrar</button>
+            <button  id="btn-close" nbButton (click)="ref.close()" size="small" class="btn-danger">Cerrar</button>
           </div>
           <div class="col-6">
-            <button nbButton status="info" size="small" (click)="ref.close()" class="btn-primary pull-right">Acción</button>
+            <button nbButton status="info" size="small" (click)="accion()" class="btn-primary pull-right">Acción</button>
           </div>
         </div>
       </nb-card-footer>
