Primer commit del proyecto

--- a/src/app/public/dashboard/dashboard.component.html
+++ b/src/app/public/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
             <div class="logo-containter">
               <a (click)="toggle()" href="#" class="navigation" style="font-size: 2rem;"><i class="nb-menu"></i></a>
               <div class="logo" (click)="inicio()" style="display: inline">
-                <img class="img-fluid d-none d-sm-block" src="/assets/img/logo-lifestyle.png" style="position: absolute;left: 2rem;top: -1rem;" />
+                <img class="img-fluid d-none d-sm-block" src="/assets/img/logo.png" style="position: absolute;left: 5rem;top: -0.5rem;width: 50%" />
               </div>
             </div>
           </div>
