--- a/src/app/public/costeo/costeo.component.html
+++ b/src/app/public/costeo/costeo.component.html
@@ -3,6 +3,7 @@
     <div class="col-sm-12">
       <nb-card>
         <nb-card-header style="padding: 10px 0px 0px 25px ;">
+          <p>PRUEBA CAMBIO</p>
           <p>Rentabilidad</p>
         </nb-card-header>
         <nb-card-body style="padding: 40px">
