--- a/src/app/public/flujo-de-caja/flujo-de-caja.component.scss
+++ b/src/app/public/flujo-de-caja/flujo-de-caja.component.scss
@@ -1,3 +1,6 @@
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~open-iconic/font/css/open-iconic-bootstrap.css';
+
 .btn-azul{
     background-color: #3D98DE;
     color: white;
