--- a/src/app/public/signup/signup.component.html
+++ b/src/app/public/signup/signup.component.html
@@ -1,3 +1,96 @@
 <p>
   signup works!
 </p>
+<div class="container" style="margin-top: 10%">
+  <div class="row">
+    <div class="col-md-8" style="margin: 0px auto;">
+      <form [formGroup] = "signupForm" (ngSubmit)="verificacion()">
+        <nb-card>
+          <nb-card-body style="padding: 65px;">
+            <div class="row" style="margin-bottom: 20px;">
+              <div class="col-sm-5" style="margin: 0 auto">
+                <img src="/assets/img/logo.png" class="img-fluid" style="height: 40px;"/>
+              </div>
+            </div>
+            <div *ngIf="!etapa1" class="row">
+              <div class="titulo">Información básica</div>
+            </div>  
+          </nb-card-body>
+        </nb-card>
+        <div *ngIf="!etapa1" id="user-data">
+          <div class="form-group">
+            <input 
+              type="email" 
+              id="email" 
+              formControlName="email"
+              placeholder="Correo electrónico" 
+              class="form-control" >
+          </div>
+          <div class="form-group">
+            <input 
+              type="password" 
+              id="contrasena1" 
+              formControlName="contrasena1"
+              placeholder="Contraseña" 
+              class="form-control">
+          </div>
+          <div class="form-group">
+            <input 
+              type="password" 
+              id="contrasena2" 
+              formControlName="contrasena2"
+              placeholder="Confirmar contraseña" 
+              class="form-control">
+          </div>
+          <div class="form-group">
+            <button class="btn btn-azul">Continuar</button>
+          </div> 
+        </div>
+     
+        
+        <div *ngIf="etapa1 && !etapa2" id="negocio-data">
+          <div class="form-group">
+            <input 
+              type="text" 
+              id="nombreNegocio" 
+              formControlName="nombreNegocio"
+              placeholder="Nombre del negocio" 
+              class="form-control" >
+          </div>
+          <div class="form-group">
+            <input 
+              type="number" 
+              id="nit" 
+              formControlName="nit"
+              placeholder="Número del N.I.T." 
+              class="form-control"
+            >
+          </div>
+          <div class="form-group">
+            <select
+              [(ngModel)]="categoriaSeleccionada.id"
+              (change)="onSelect($event.target.value)"
+              id="categoriaNegocio" 
+              formControlName="categoriaNegocio" 
+              placeholder="Categoría del negocio"
+              class="form-control">
+              <option *ngFor="let categoria of categorias" value= {{categoria.id}}>{{categoria.name}}</option>
+            </select>
+          </div>
+          <div class="form-group">
+              <select
+                id="subCategoriaNegocio" 
+                formControlName="subCategoriaNegocio" 
+                placeholder="Subcategoría del negocio"
+                class="form-control">
+                <option *ngFor="let subCategoria of subCategorias" value= {{subCategoria.id}}>{{subCategoria.name}}</option>
+              </select>
+            </div>
+          <div class="form-group">
+            <button class="btn btn-azul">Registrar negocio</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
