--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -24,6 +24,8 @@
                     <div *ngIf="f.usuario.errors.required">Usuario requerido</div>
                   </div>
                 </div>
+                <table style="width:100%">
+                <td style="width:70%">
                 <div class="form-group">
                   <input type="password" placeholder="Contraseña" formControlName="clave" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.clave.errors }" />
                   <div *ngIf="submitted && f.clave.errors" class="invalid-feedback">
@@ -31,6 +33,10 @@
                     <div *ngIf="f.clave.errors.minlength">La contraseña debe poseer al menos 6 caracteres</div>
                   </div>
                 </div>
+                </td>
+                <td><span style="color: #3D98DE; margin-left: 10%; text-align: center ; cursor: pointer;" (click)="goToRecover()">Olvidé mi contraseña</span>
+                </td>
+              </table>
                 <div class="form-group">
                   <button class="btn btn-azul">Iniciar sesión</button>
                 </div>
