--- a/src/app/public/signup/signup.component.scss
+++ b/src/app/public/signup/signup.component.scss
@@ -5,7 +5,14 @@
 }
 .titulo{
     color: black;
-    align-content: center;
+    text-align: center;
     font-family: 'calibri';
+    font-weight: bold;
     font-size: 24px; 
+}
+.texto-centrado{
+    color: black;
+    text-align: center;
+    font-family: 'calibri';
+    font-size: 14px; 
 }
