--- a/src/app/public/flujo-de-caja/flujo-de-caja.component.html
+++ b/src/app/public/flujo-de-caja/flujo-de-caja.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="container">
   <div class="row">
     <div class="col-sm-5">
@@ -10,7 +12,7 @@
           <button class="btn btn-azul">Importar datos</button>
         </div>
         <div class="col-sm-4">
-          <button class="btn btn-blanco">Escenario Base <i class="fa fa-chevron-down" aria-hidden="true"
+          <button class="btn btn-blanco" (click)="goToAgregarEscenario()">Escenario Base <i class="fa fa-chevron-down" aria-hidden="true"
               style="margin-left: 2px"></i></button>
         </div>
         <div class="col-sm-4">
@@ -136,8 +138,8 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="btn btn-dark-graf">Evolución</div>
-              <div class="btn btn-blanco-sm-graf">Ingreso vs egresos</div>
-              <div class="btn btn-blanco-sm-graf" style="padding-top: 9px;">vs presupuesto</div>
+              <button class="btn btn-blanco-sm-graf" (click)="cambiarGrafico2()">Ingreso vs egresos</button>
+              <button class="btn btn-blanco-sm-graf" style="padding-top: 9px;">vs presupuesto</button>
             </div>
             <div class="col-sm-4"></div>
             <div class="col-sm-4">
@@ -153,7 +155,8 @@
           </div>
         </nb-card-header>
         <nb-card-body>
-          <canvas #grafico1 style="width: 100%; height: 300px;"></canvas>
+          <canvas #grafico1 style="width: 100%; height: 300px;" ></canvas>
+          <canvas id="IvsE"></canvas>
         </nb-card-body>
       </nb-card>
     </div>
