--- a/src/app/public/signup/signup.component.html
+++ b/src/app/public/signup/signup.component.html
@@ -1,22 +1,19 @@
-<p>
-  signup works!
-</p>
+<nb-layout>
+    <nb-layout-column>
 <div class="container" style="margin-top: 10%">
   <div class="row">
     <div class="col-md-8" style="margin: 0px auto;">
       <form [formGroup] = "signupForm" (ngSubmit)="verificacion()">
         <nb-card>
           <nb-card-body style="padding: 65px;">
-            <div class="row" style="margin-bottom: 20px;">
+            <div class="row" style="margin-bottom: 20px;margin-left: 8%">
               <div class="col-sm-5" style="margin: 0 auto">
                 <img src="/assets/img/logo.png" class="img-fluid" style="height: 40px;"/>
               </div>
             </div>
             <div *ngIf="!etapa1" class="row">
-              <div class="titulo">Información básica</div>
-            </div>  
-          </nb-card-body>
-        </nb-card>
+              <div class="titulo" style="margin-left: 35%; margin-bottom: 40px; margin-top: 20px">Información básica</div>
+            </div>
         <div *ngIf="!etapa1" id="user-data">
           <div class="form-group">
             <input 
@@ -46,8 +43,9 @@
             <button class="btn btn-azul">Continuar</button>
           </div> 
         </div>
-     
-        
+        <div *ngIf="etapa1 && !etapa2" class="row">
+            <div class="titulo" style="margin-left: 30%; margin-bottom: 40px; margin-top: 20px">Información comercial</div>
+          </div>
         <div *ngIf="etapa1 && !etapa2" id="negocio-data">
           <div class="form-group">
             <input 
@@ -90,7 +88,36 @@
             <button class="btn btn-azul">Registrar negocio</button>
           </div>
         </div>
+        <div *ngIf="etapa1 && etapa2 && !etapa3" class="row">
+            <div class="texto-centrado" style="margin-bottom: 50px">Parece que has olvidado tu contraseña. Ingresa el email que tienes resgitrado y te ayudaremos a reestablecerla.</div>
+          </div>
+      <div *ngIf="etapa1 && etapa2 && !etapa3" id="user-recover">
+        <div class="form-group">
+          <input 
+            type="email" 
+            id="email2" 
+            formControlName="email2"
+            placeholder="Correo electrónico" 
+            class="form-control" >
+        <div class="form-group">
+          <button class="btn btn-azul" style="margin-top: 20px">Enviar instrucciones</button>
+        </div> 
+      </div>
+    </div>
+    <div *ngIf="etapa1 && etapa2 && etapa3" class="row">
+        <div class="titulo" style="margin-bottom: 50px; margin-left: 30%">¡Email enviado con éxito!</div>
+        <div class="texto-centrado" style="margin-left: 10px">Revisa tu bandeja de entrada o SPAM para recibir las instrucciones de cómo reestablecer la contrasena</div>
+    </div>
+    <div *ngIf="etapa1 && etapa2 && etapa3" id="user-recover2">
+        <div class="form-group">
+          <button class="btn btn-azul" style="margin-top: 58px">Iniciar sesión</button> 
+      </div>
+    </div>
+      </nb-card-body>
+    </nb-card>
       </form>
     </div>
   </div>
 </div>
+</nb-layout-column>
+</nb-layout>
