--- a/src/app/public/agregar-escenario/agregar-escenario.component.html
+++ b/src/app/public/agregar-escenario/agregar-escenario.component.html
@@ -1,11 +1,11 @@
+<nb-layout><nb-layout-column>
 <div class="col-md-12" style="margin-bottom: 31px;text-align: center; size: 73px; font:calibri;font-size: 24px; font-weight:bold; color:black;background-color: #EFEFEF">Agregar escenario</div>
-<div class="col-md-12" style="height:100%;background-color: white">
-    <div class="col-md-8" style="margin-left: 17%;font:calibri; font-size: 15px;color:black">Los escenarios son aquellas ocasiones en las que las empresas se preguntarían “y qué pasaría si…” Agrega un nuevo escenario y observa cómo se comporta el flujo de caja de este negocio.
+    <div class="col-md-8" style="margin-left: 25%; font:calibri; font-size: 15px;color:black">Los escenarios son aquellas ocasiones en las que las empresas se preguntarían “y qué pasaría si…” Agrega un nuevo escenario y observa cómo se comporta el flujo de caja de este negocio.
         <div class="col-md-8" style="margin-top:60px">
             <table style="border-width: 10px;border-color:black">
                 <td style="height:71px; margin-bottom:31px"> 
                     <label for="nombre">Nombre:</label>
-                    <input id="nombre" class="form-group" style="width:300px;margin-right:18px; height:41px">
+                    <input id="nombre" class="form-group" style="width:300px;margin-right:18px; height:41px;border-style: inset; padding: 12px 12px">
                 </td>
                 <td style="height:71px;margin-bottom:31px">
                     <label for="monto">Monto:</label>
@@ -53,4 +53,4 @@
             </div>
         </div>
     </div>    
-</div>
+</nb-layout-column></nb-layout>
