--- a/src/app/public/flujo-de-caja/flujo-de-caja.component.html
+++ b/src/app/public/flujo-de-caja/flujo-de-caja.component.html
@@ -18,13 +18,13 @@
         <div class="col-sm-4">
           <button (click)="calendario=!calendario" id="butCalendario" class="btn btn-blanco">Este año 2019 <i class="fa fa-chevron-down" aria-hidden="true"
               style="margin-left: 2px"></i></button>
-              <div *ngIf="calendario" class="col-sm-6">
+              <!--<div *ngIf="calendario" class="col-sm-6">
                   <dl-date-time-picker
                   startView="year"
                   maxView="year"
                   minView="year">
                   </dl-date-time-picker>
-              </div>
+              </div>-->
               
         </div>
       </div>
