--- a/src/app/public/flujo-de-caja/flujo-de-caja.component.html
+++ b/src/app/public/flujo-de-caja/flujo-de-caja.component.html
@@ -18,6 +18,7 @@
         <div class="col-sm-4">
           <button (click)="calendario=!calendario" id="butCalendario" class="btn btn-blanco">Este año 2019 <i class="fa fa-chevron-down" aria-hidden="true"
               style="margin-left: 2px"></i></button>
+
               <!--<div *ngIf="calendario" class="col-sm-6">
                   <dl-date-time-picker
                   startView="year"
@@ -63,7 +64,7 @@
     <div class="col-md-3 col-xs-6 col-lg-3 col-xl-3">
       <nb-card>
         <nb-card-header class="header-valores">
-          <div class="row">
+          <div class="row" (click)="goToIngresosEgresos()">
             <div class="col-sm-6">
               <p class="titulo-tarjeta">Ingresos</p>
             </div>
@@ -74,7 +75,7 @@
           </div>
         </nb-card-header>
         <nb-card-body class="cuerpo-tarjeta">
-          <div class="row" style="padding-top: 0px">
+          <div class="row" style="padding-top: 0px" (click)="goToIngresosEgresos()">
             <div class="col-md-6 col-lg-6 col-xl-6 col-xs-12">
               <p class="valor-estadistica">{{40000000| currency:'USD' :'symbol' : '1.0-0' }}</p>
               <!-- <p class="estadistica2"><i class="nb-arrow-thin-up"></i> 13.8%</p> -->
@@ -88,7 +89,7 @@
     <div class="col-md-3 col-xs-6 col-lg-3 col-xl-3">
       <nb-card>
         <nb-card-header>
-          <div class="row">
+          <div class="row" (click)="goToIngresosEgresos()">
             <div class="col-sm-6">
               <p class="titulo-tarjeta">Egresos</p>
             </div>
@@ -99,7 +100,7 @@
           </div>
         </nb-card-header>
         <nb-card-body class="cuerpo-tarjeta">
-          <div class="row">
+          <div class="row" (click)="goToIngresosEgresos()">
             <div class="col-md-6 col-lg-6 col-xl-6 col-xs-12">
               <p class="valor-estadistica">{{50000000| currency:'USD' :'symbol' : '1.0-0' }}</p>
               <!-- <p class="estadistica1"><i class="nb-arrow-thin-down"></i> 13.8%</p> -->
@@ -155,7 +156,10 @@
           </div>
         </nb-card-header>
         <nb-card-body>
-          <canvas #grafico1 style="width: 100%; height: 300px;" ></canvas>
+          <div>
+            
+          </div>
+          <canvas #grafico1 style="width: 100%; height: 300px;" [ngStyle]="{'display': mostrarIvsE? 'none': 'flex'}"></canvas>
           <canvas id="IvsE"></canvas>
         </nb-card-body>
       </nb-card>
