--- a/src/app/public/signup/signup.component.html
+++ b/src/app/public/signup/signup.component.html
@@ -84,6 +84,15 @@
                 <option *ngFor="let subCategoria of subCategorias" value= {{subCategoria.id}}>{{subCategoria.name}}</option>
               </select>
             </div>
+            <div class="form-group">
+                <input 
+                  type="file" 
+                  id="logoNegocio" 
+                  formControlName="logoNegocio"
+                  placeholder="Adjunta el logo del negocio" 
+                  class="form-control"
+                >
+              </div>
           <div class="form-group">
             <button class="btn btn-azul">Registrar negocio</button>
           </div>
