--- a/src/app/public/flujo-de-caja/flujo-de-caja.component.scss
+++ b/src/app/public/flujo-de-caja/flujo-de-caja.component.scss
@@ -87,3 +87,35 @@ nb-card-header{
     font-weight: bold;
     font-size: 12px;
 }
+.dropdown {
+    position: relative;
+    display: inline-block;
+    background-color: white;
+    color: black;
+    width: 100%;
+    font-size: 9px;
+    padding: 10px;
+  }
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+.show {display:block;}
+.dropbtn {
+    background-color: white;
+    color: black;
+    width: 100%;
+    font-size: 9px;
+    border: none;
+    cursor: pointer;
+  }
+.dropdown-content a {
+    color: black;
+    padding: 8px 16px;
+    text-decoration: none;
+    display: block;
+  }
