--- a/src/app/public/agregar-escenario/agregar-escenario.component.scss
+++ b/src/app/public/agregar-escenario/agregar-escenario.component.scss
@@ -1,3 +1,10 @@
+.btn-azul{
+    background-color: #3D98DE;
+    color: white;
+    width: 100%;
+    font-size: 9px;
+    padding: 10px!important;
+}
 .color{
     width: 100%;
     height: 40px;
