--- a/src/app/public/flujo-de-caja/flujo-de-caja.component.html
+++ b/src/app/public/flujo-de-caja/flujo-de-caja.component.html
@@ -143,11 +143,12 @@
         <nb-card-header>
           <div class="row">
             <div class="col-sm-4">
-              <button class="btn btn-dark-graf" (click)="cambiarGrafico1()" [ngStyle]="{'background-color': mostrarIvsE? 'white':'black',
-                                                          'color': !mostrarIvsE? 'white':'black'}">Evolución</button>
-              <button class="btn btn-blanco-sm-graf" (click)="cambiarGrafico2()" [ngStyle]="{'background-color': !mostrarIvsE? 'white':'black',
-                                                          'color': mostrarIvsE? 'white':'black'}">Ingreso vs egresos</button>
-              <button class="btn btn-blanco-sm-graf" style="padding-top: 9px;">vs presupuesto</button>
+              <button class="btn btn-dark-graf" (click)="cambiarGrafico1()" [ngStyle]="{'background-color': !(mostrarGraf===1)? 'white':'black',
+                                                          'color': (mostrarGraf===1)? 'white':'black'}">Evolución</button>
+              <button class="btn btn-blanco-sm-graf" (click)="cambiarGrafico2()" [ngStyle]="{'background-color': !(mostrarGraf===2)? 'white':'black',
+                                                          'color': (mostrarGraf===2)? 'white':'black'}">Ingreso vs egresos</button>
+              <button class="btn btn-blanco-sm-graf" (click)="cambiarGrafico3()" [ngStyle]="{'background-color': !(mostrarGraf===3)? 'white':'black',
+                                                          'color': (mostrarGraf===3)? 'white':'black'}">vs presupuesto</button>
             </div>
             <div class="col-sm-4"></div>
             <div class="col-sm-4">
@@ -166,8 +167,9 @@
           <div>
             
           </div>
-          <canvas #grafico1 style="width: 100%; height: 300px;" [ngStyle]="{'display': mostrarIvsE? 'none': 'flex'}"></canvas>
-          <canvas id="IvsE" [ngStyle]="{'display': !mostrarIvsE? 'none': 'flex'}"></canvas>
+          <canvas #grafico1 style="width: 100%; height: 300px;" [ngStyle]="{'display': !(mostrarGraf===1)? 'none': 'flex'}"></canvas>
+          <canvas id="IvsE" [ngStyle]="{'display': !(mostrarGraf===2)? 'none': 'flex'}"></canvas>
+          <canvas id="vsPresupuesto" [ngStyle]="{'display': !(mostrarGraf===3)? 'none': 'flex'}"></canvas>
         </nb-card-body>
       </nb-card>
     </div>
