--- a/src/app/public/ingresos-egresos/ingresos-egresos.component.scss
+++ b/src/app/public/ingresos-egresos/ingresos-egresos.component.scss
@@ -67,3 +67,57 @@
 .texto-blanco{
     color:white
 }
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    background-color: white;
+    color: black;
+    width: 100%;
+    font-size: 9px;
+    padding: 10px;
+    border-radius: .375rem;
+    border: 2px solid transparent;
+  }
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+.show {display:block;}
+.dropbtn {
+    background-color: white;
+    color: black;
+    width: 100%;
+    font-size: 9px;
+    border: none;
+    cursor: pointer;
+    font-weight: bold
+  }
+.dropdown-content a {
+    color: black;
+    padding: 8px 16px;
+    text-decoration: none;
+    display: block;
+  }
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+  }
+  
+a:hover {
+    background-color:#333333;
+    color: white;
+  }
+  
+.previous {
+    background-color: black;
+    color: white;
+    padding:10px;
+    padding-bottom:18px;
+  }
+  
